# EKeyDemo_NXY

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  localconfig.gradle  localkey.gradle  settings.gradle
app/: build.gradle  debug.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: froad_keyboard_enter.xml  froad_keyboard_exit.xml
app/src/main/res/drawable/: bg_clear_cache_dialog.xml  bg_common_btn_selector.xml  bg_edit_intput_shape.xml  dexter_froad_frame_perdialog_bg.xml  dexter_froad_frame_perdialog_btn_left_bg.xml  dexter_froad_frame_perdialog_btn_right_bg.xml  dialog_notitle_oc_left_btn_bg.xml  dialog_notitle_oc_right_btn_bg.xml  dialog_notitle_ok_bg.xml  dialog_notitle_ok_btn_bg.xml  eid_bg_loading_dialog.xml  eid_common_btn_bg.xml  eid_common_btn_bg_.xml  eid_common_btn_bg_selector.xml  eid_common_withe_line.xml  eid_style_progress.xml  froad_frame.xml  froad_keyboard_cancel_selector.xml  froad_keyboard_key_selector.xml  (+2 more)
fingerprint/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
ivcardapilibrary/: build.gradle
ivcardapilibrary/src/main/: AndroidManifest.xml
ukeySDK/: build.gradle  proguard-rules.pro
ukeySDK/src/main/: AndroidManifest.xml
ukeyjni/: CMakeLists.txt  build.gradle  proguard-rules.pro
ukeyjni/src/main/: AndroidManifest.xml
ukeyjni/src/main/cpp/: Base64Utils.cpp  Base64Utils.h  DesAlgo.cpp  DesAlgo.h  GenP10.cpp  GenP10.h  GmSSL.cpp  GmSSL.h  NXYPreSet.cpp  Utils.cpp  Utils.h  com_froad_ukey_jni_tmjni.cpp  froadLog.cpp  froadLog.h  tmPrivMethod.cpp  tmPrivMethod.h
ukeyjni/src/main/cpp/openssl/: opensslconf.h
ukeyjni/src/main/res/values/: strings.xml
(+152 files in other folders)
